--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rl_arena_collision_dumper"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,6 +9,7 @@ edition = "2021"
 byteorder = "1.4.3"
 
 [profile.release]
+codegen-units = 1
 opt-level = "z"
 lto = true
 strip = true
