--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
 name = "rl_arena_collision_dumper"
-version = "0.1.3"
+description = "Dumps Rocket League's collision files for RocketSim"
+repository = "https://github.com/VirxEC/rl_arena_collision_dumper"
+license = "MIT"
+version = "0.1.4"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-byteorder = "1.4.3"
+byteorder = "1.5.0"
+once_cell = "1.18.0"
+walkdir = "2.4.0"
 
 [profile.release]
 codegen-units = 1
