--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ combo_vec = { version = "0.7.0", default-features = false }
 phf = { version = "0.11.2", features = ["macros"] }
 walkdir = "2.4.0"
 
+[features]
+bin = []
+
 [profile.release]
 codegen-units = 1
 opt-level = "z"
